# ChatServer

./: .gitignore  CMakeLists.txt  README.md.txt
source/: config.h  main.cpp
source/settings/: settings.cpp  settings.h
source/utils/: logger.h
